MagicListMaker/CodeParsing/Analizer.cs
using System;
using System.Collections.Generic;
using System.Drawing;
using System.IO;
using System.Linq;
using System.Reflection;
using System.Text;
using System.Text.RegularExpressions;
using System.Threading.Tasks;
using static MagicParser.Database;

namespace MagicParser.CodeParsing
{
    public class Analizer
    {
        #region Fields
        public string input { get; private set; } //текст для разбора
        private string token { get; set; } //Текущий токен - для удобства доступа в своём поле
        
        private Dictionary<string, Database> dbs { get; set; } //Список баз данных по типу 'внутреннее имя БД' - 'ссылка на БД'
        public string errorDescription { get; private set; } //Сюда записывается описание ошибки; после вызова каждого метода обязательно нужно делать проверку, нет ли здесь информации, если есть - прекращать работу анализатора
        public List<Token> tokens { get; set; }
        public static int tokenizerLastErrorPos = 0; //Последняя позиция токенайзера в случае, когда парсер вернул ошибку
        #endregion

        //Конструктор
        public Analizer(string input)
        {
            this.input = input;
            token = null;
            dbs = new Dictionary<string, Database>();
            errorDescription = null;

            tokens = new List<Token>();

            tokens.Add(new Token(Token.declarationBeginToken));
            tokens.Add(new Token(Token.declarationEndToken));
            tokens.Add(new Token(Token.listBeginToken));
            tokens.Add(new Token(Token.listEndToken));

            tokens.Add(new Token(Token.databasesToken));

            tokens.Add(new Token(Token.parseNotesToken,             true, "bool",   typeof(Database).GetField("parseNotes")));
            tokens.Add(new Token(Token.defaultDollarRateToken,      true, "number", typeof(Database).GetField("defaultDollarRate")));
            tokens.Add(new Token(Token.defaultDiscountToken,        true, "number", typeof(Database).GetField("defaultDiscount")));
            tokens.Add(new Token(Token.defaultGemMintDiscountToken, true, "number", typeof(Database).GetField("defaultGemMintDiscount")));
            tokens.Add(new Token(Token.defaultMintDiscountToken,    true, "number", typeof(Database).GetField("defaultMintDiscount")));
            tokens.Add(new Token(Token.defaultNMDiscountToken,      true, "number", typeof(Database).GetField("defaultNMMDiscount")));
            tokens.Add(new Token(Token.defaultNMMDiscountToken,     true, "number", typeof(Database).GetField("defaultNMDiscount")));
            tokens.Add(new Token(Token.defaultNMSPDiscountToken,    true, "number", typeof(Database).GetField("defaultNMSPDiscount")));
            tokens.Add(new Token(Token.defaultSPDiscountToken,      true, "number", typeof(Database).GetField("defaultSPDiscount")));
            tokens.Add(new Token(Token.defaultSPMPDiscountToken,    true, "number", typeof(Database).GetField("defaultSPMPDiscount")));
            tokens.Add(new Token(Token.defaultMPDiscountToken,      true, "number", typeof(Database).GetField("defaultMPDiscount")));
            tokens.Add(new Token(Token.defaultMPHPDiscountToken,    true, "number", typeof(Database).GetField("defaultMPHPDiscount")));
            tokens.Add(new Token(Token.defaultHPDiscountToken,      true, "number", typeof(Database).GetField("defaultHPDiscount")));
            tokens.Add(new Token(Token.smartRoundToken,             true, "bool",   typeof(Database).GetField("smartRound")));
            tokens.Add(new Token(Token.roundToken,                  true, "number", typeof(Database).GetField("round")));
            tokens.Add(new Token(Token.handleMultiNamesToken,       true, "bool",   typeof(Database).GetField("handleMultiNames")));

            tokens.Add(new Token(Token.filterToken));
            tokens.Add(new Token(Token.groupingToken));
            tokens.Add(new Token(Token.sortingToken));
            tokens.Add(new Token(Token.formattingToken));
        }


        #region General methods
        
        //получаем токен
        private void GetToken(Tokenizer t)
        {
            token = t.GetToken();
        }

        //Следующий токен - получается без изменения позиции токенайзера
        private string GetNextToken(Tokenizer t)
        {
            return t.ForseeToken();
        }

        //Шорткаты для ошибок
        private string ErrorExpected(string expected = "", bool quotes = true)
        {
            string output = "";
            string space = " ";
            if (token != "")
            {
                if (token != "'") output = "Unexpected token: '" + token + "'.";
                else output = "Unexpected token: \"'\".";
            }
            else space = "";

            if (expected != "")
            {
                if (quotes) output += space + "'" + expected + "' expected.";
                else output += space + expected + " expected.";
            }
            return output;
        }

        private string ErrorQuotes(string whatToDo)
        {
            return "Unexpected token: " + token + ". You must " + whatToDo + " in single quotes.";
        }

        #endregion


        //основной метод. Возвращает готовую строку с данными. Все другие методы сделаны в соответствии с BNF.
        //input = ([databasesDeclaration] [list] [freeText])*
        public string Parse()
        {
            Tokenizer t = new Tokenizer(input);
            string output = "";
            int lastPos = 0;
            //пока токенайзер не просмотрит весь инпут, выполняем
            while (!t.endIsReached)
            {
                //databasesDeclaration = declarationBeginToken declaration* declarationEndToken
                if (GetNextToken(t).ToLower() == Token.declarationBeginToken.ToLower())
                {
                    output += t.GetWhiteSpaces();
                    GetToken(t);
                    DBDeclarations(t);
                    if (errorDescription != null) { tokenizerLastErrorPos = t.pos; return output; }
                    GetToken(t);
                    if (token.ToLower() != Token.declarationEndToken.ToLower()) { errorDescription = ErrorExpected(Token.declarationEndToken); tokenizerLastErrorPos = t.pos; return output; }
                    lastPos = t.pos;
                }
                //list = listBeginToken listParams listEndToken
                else if (GetNextToken(t).ToLower() == Token.listBeginToken.ToLower())
                {
                    output += t.GetWhiteSpaces();
                    GetToken(t);
                    string result = ListParams(t);
                    if (errorDescription != null) { tokenizerLastErrorPos = t.pos; return output; }
                    output += result;
                    GetToken(t);
                    if (token.ToLower() != Token.listEndToken.ToLower()) { errorDescription = ErrorExpected(Token.listEndToken); tokenizerLastErrorPos = t.pos; return output; }
                    lastPos = t.pos;
                }
                //Иначе необходимо добавить весь текст (с пробелами) в аутпут
                //freeText = ?string that doesn't include codeBeginToken?
                else
                {
                    GetToken(t);
                    output += input.Substring(lastPos, t.pos - lastPos);
                    lastPos = t.pos;
                }
            }

            tokenizerLastErrorPos = 0;
            return output;
        }

        //declaration*
        //declaration = name '=' "'" path "'";
        private void DBDeclarations(Tokenizer t)
        {
            do
            {
                //name = ?regexp?
                if (GetNextToken(t).ToLower() != Token.declarationEndToken.ToLower() && Regex.IsMatch(GetNextToken(t), @"^[a-zA-Z_]\w+$"))
                {
                    GetToken(t);
                    if (dbs.ContainsKey(token.ToLower()))
                    {
                        errorDescription = "Database with this name have been already declared. Choose another name.";
                        return;
                    }
                    string DBname = token.ToLower();
                    GetToken(t);
                    if (token == "=")
                    {
                        GetToken(t);
                        if (token == "'")
                        {
                            token = t.GetUntil('\'');
                            //path = ?regexp?;
                            if (Regex.IsMatch(token, @"^(?i)([a-z]+:)?[\\/]?([\\/].*)*[\\/]?(?-i)$"))
                            {
                                string DBpath = token;
                                if (!File.Exists(DBpath)) { errorDescription = "The file '" + DBpath + "' doesn't exist."; return; }
                                dbs.Add(DBname, new Database(DBpath));
                                GetToken(t);
                                if (token != "'") { errorDescription = ErrorQuotes("declare the path"); return; }
                            }
                            else { errorDescription = "Wrong file path: " + token; return; }
                        }
                        else { errorDescription = ErrorQuotes("declare the path"); return; }
                    }
                    else { errorDescription = ErrorExpected("="); return; }
                }
                else if (GetNextToken(t).ToLower() == "") { GetToken(t); errorDescription = ErrorExpected(Token.declarationEndToken); return; }
                else if (GetNextToken(t).ToLower() == Token.declarationEndToken.ToLower())
                {
                    if (dbs.Count() == 0) errorDescription = "At least one Database should me declared!";
                    return;
                }
                else { GetToken(t); errorDescription = "Wrong Database name: " + token; return; }
            }
            while (!t.endIsReached);
        }

        //listParams = databases [options] [filter] [[grouping] sorting] [formatting]
        private string ListParams(Tokenizer t)
        {
            List<Database> currentDBs = new List<Database>();
            GetToken(t);
            //databases = databasesToken '=' "'" dbsValue "'"
            if (token.ToLower() == Token.databasesToken.ToLower())
            {
                GetToken(t);
                if (token == "=")
                {
                    GetToken(t);
                    if (token == "'")
                    {
                        if (GetNextToken(t) == "'") { errorDescription = ErrorExpected("Databases names"); return ""; }
                        //dbsValue = name+
                        do
                        {
                            GetToken(t);
                            if (dbs.ContainsKey(token.ToLower()))
                            {
                                dbs[token.ToLower()].Clear();
                                currentDBs.Add(dbs[token.ToLower()]);
                            }
                            else { errorDescription = "Database with the name '" + token + "' doesn't exist. Declare it first."; return ""; }
                        }
                        while (!t.endIsReached && GetNextToken(t) != "'");
                        GetToken(t);
                        if (token != "'") { errorDescription = ErrorQuotes("define the names"); return ""; }
                    }
                    else { errorDescription = ErrorQuotes("define the names"); return ""; }
                }
                else { errorDescription = ErrorExpected("="); return ""; }
            }
            else { errorDescription = "You must choose databases you want to use in the listing."; return ""; }

            //[options] [filter] [[grouping] sorting] [formatting]
            //options = option+
            //option = boolOption | numberOption | stringOption
            //boolOption = boolOptionToken '=' bool
            //numberOption = numberOptionToken '=' number
            //stringOption = stringOptionToken '=' "'" ?string? "'"
            List<string> usedOptions = new List<string>();
            while (true)
            {
                bool noOptions = false;
                foreach (Token key in tokens)
                {
                    if (key.isOption && GetNextToken(t).ToLower() == key.name.ToLower())
                    {
                        noOptions = false;
                        if (!usedOptions.Contains(key.name.ToLower()))
                        {
                            HandleOption(t, key, currentDBs);
                            if (errorDescription != null) return "";
                            usedOptions.Add(key.name.ToLower());
                            break;
                        }
                        else { GetToken(t); errorDescription = "The option '" + token + "' has already been used"; return ""; }
                    }
                    else noOptions = true;
                }
                if (noOptions) break;
            }
            

            //После определения всех опций про парсинг парсим базы
            foreach (Database db in currentDBs)
            {
                db.ReadFile();
                if (db.errorDescription != null) { errorDescription = db.errorDescription; return ""; }
            }
            //Затем сливаем их
            Database mergedDB = Merge(currentDBs);

            //[filter]
            if (GetNextToken(t).ToLower() == Token.filterToken.ToLower())
            {
                Filter(t, mergedDB);
                if (errorDescription != null) return "";
            }

            //[grouping]
            List<List<string>> groupFields = new List<List<string>>();
            if (GetNextToken(t).ToLower() == Token.groupingToken.ToLower())
            {
                groupFields = Group(t);
                if (errorDescription != null) return "";
            }

            //[sorting]
            if (groupFields.Count != 0 && GetNextToken(t).ToLower() != Token.sortingToken.ToLower()) { GetToken(t); errorDescription = ErrorExpected(Token.sortingToken) + " If you set grouping, you must set sorting."; return ""; }
            if (GetNextToken(t).ToLower() == Token.sortingToken.ToLower())
            {
                if (groupFields.Count != 0) Sort(t, mergedDB, groupFields);
                else Sort(t, mergedDB);
                
                if (errorDescription != null) return "";
            }

            //[formatting]
            string output = "";
            if (GetNextToken(t).ToLower() == Token.formattingToken.ToLower())
            {
                output = Format(t, mergedDB);
                if (errorDescription != null) return output;
            }

            return output;
        }

        private void HandleOption(Tokenizer t, Token key, List<Database> currentDBs)
        {
            GetToken(t);
            GetToken(t);
            if (token == "=")
            {
                GetToken(t);
                if (key.optionType == "bool")
                {
                    bool value;

                    if (token.ToLower() == "true" || token == "1") value = true;
                    else if (token.ToLower() == "false" || token == "0") value = false;
                    else { errorDescription = ErrorExpected("Bool value", false); return; }
                    
                    foreach (Database db in currentDBs) key.field.SetValue(db, value);
                }
                else if (key.optionType == "number")
                {
                    float value;
                    if (!float.TryParse(token.Replace('.', ','), out value)) { errorDescription = ErrorExpected("Number value", false); return; }
                    foreach (Database db in currentDBs) key.field.SetValue(db, value);
                }
                else if (key.optionType == "string")
                {
                    //There are no string options by now
                }
                else { errorDescription = "Wrong token type parameter; fix the code. The option is: " + token; }
            }
            else { errorDescription = ErrorExpected("="); return; }
        }

        //filter = filterToken '=' "'" boolValue "'" ';'
        private void Filter(Tokenizer t, Database mergedDB)
        {
            GetToken(t);
            if (token == Token.filterToken.ToLower())
            {
                GetToken(t);
                if (token == "=")
                {
                    GetToken(t);
                    if (token == "'")
                    {
                        List<Entry> cardList = new List<Entry>(mergedDB.cardList);
                        int pos = t.pos;
                        foreach (Entry card in cardList)
                        {
                            Tokenizer T = new Tokenizer(t.input.Substring(pos));
                            bool delete = !BoolValue(T, card);
                            if (errorDescription != null) return;
                            if (delete) mergedDB.cardList.Remove(card);

                            GetToken(T);
                            if (token != "'") { errorDescription = ErrorQuotes("define the filter"); return; }

                            t.SetPos(T.pos + t.input.Length - T.input.Length);
                        }
                    }
                    else { errorDescription = ErrorQuotes("define the filter"); return; }
                }
                else { errorDescription = ErrorExpected("="); return; }
            }
            else { errorDescription = ErrorExpected(Token.filterToken); return; }


        }

        //grouping = groupingToken '=' "'" groupingValue "'"
        private List<List<string>> Group(Tokenizer t)
        {
            GetToken(t);
            if (token == Token.groupingToken.ToLower())
            {
                List<List<string>> groupFields = new List<List<string>>();
                GetToken(t);
                if (token == "=")
                {
                    //groupingValue = "'" field+ (',' field+)* "'"
                    GetToken(t);
                    if (token == "'")
                    {
                        if (GetNextToken(t) == "'") { errorDescription = ErrorExpected("Field name", false); return groupFields; }
                        //field+
                        //field = ?fieldName?
                        List<string> list = new List<string>();
                        do
                        {
                            GetToken(t);
                            //Проверяем существование поля с таким названием
                            FieldInfo field = typeof(Entry).GetField(token, BindingFlags.IgnoreCase | BindingFlags.Public | BindingFlags.Instance);
                            if (field != null) list.Add(token.ToLower());
                            else { errorDescription = "Wrong field name: " + token; return null; }
                        }
                        while (!t.endIsReached && GetNextToken(t) != "," && GetNextToken(t) != "'");
                        groupFields.Add(list);
                        while (!t.endIsReached && GetNextToken(t) != "'")
                        {
                            if (GetNextToken(t) == ",")
                            {
                                GetToken(t); //','
                                List<string> l = new List<string>();
                                do
                                {
                                    GetToken(t);
                                    if (token == "'") { errorDescription = ErrorExpected("Database name", false); return null; }
                                    //Проверяем существование поля с таким названием
                                    FieldInfo field = typeof(Entry).GetField(token, BindingFlags.IgnoreCase | BindingFlags.Public | BindingFlags.Instance);
                                    if (field != null) l.Add(token.ToLower());
                                    else { errorDescription = "Wrong field name: " + token; return null; }
                                }
                                while (!t.endIsReached && GetNextToken(t) != "," && GetNextToken(t) != "'");
                            }
                            else if (GetNextToken(t) != "'") { GetToken(t); errorDescription = ErrorExpected("'"); return null; }
                            groupFields.Add(list);
                        }
                        GetToken(t);
                        if (token != "'") { errorDescription = ErrorExpected("'"); return null; }
                    }
                    else { errorDescription = ErrorQuotes("define the grouping"); return null; }
                }
                else { errorDescription = ErrorExpected("="); return null; }
                return groupFields;
            }
            else { errorDescription = ErrorExpected(Token.groupingToken); return null; }
        }

        //sorting = sortingToken '=' "'" sortingValue "'"
        private void Sort(Tokenizer t, Database db, List<List<string>> groupFields = null)
        {
            GetToken(t);
            if (token == Token.sortingToken.ToLower())
            {
                GetToken(t);
                if (token == "=")
                {
                    GetToken(t);
                    if (token == "'")
                    {
                        //sortingValue = (['!'] field)+;
                        List<Tuple<string, bool>> fields = new List<Tuple<string, bool>>();
                        do
                        {
                            bool directOrder = true;
                            if (GetNextToken(t) == "!")
                            {
                                GetToken(t);
                                directOrder = false;
                            }

                            GetToken(t);
                            //Проверяем существование поля с таким названием
                            FieldInfo field = typeof(Entry).GetField(token, BindingFlags.IgnoreCase | BindingFlags.Public | BindingFlags.Instance);
                            if (field != null) fields.Add(new Tuple<string, bool>(token.ToLower(), directOrder));
                            else { errorDescription = "Wrong field name: " + token; return; }
                        }
                        while (!t.endIsReached && GetNextToken(t) != "'");

                        GetToken(t);
                        if (token != "'") { errorDescription = ErrorQuotes("define sorting"); return; }
                        
                        SortDB(db, fields);
                        if (errorDescription != null) return;
                        if (groupFields != null)
                        {
                            GiveGroupIDs(db, groupFields);
                            if (errorDescription != null) return;
                            fields.Insert(0, new Tuple<string, bool>("groupID", true));
                            SortDB(db, fields);
                            if (errorDescription != null) return;
                        }
                    }
                    else { errorDescription = ErrorQuotes("define sorting"); return; }
                }
                else { errorDescription = ErrorExpected("="); return; }
            }
            else { errorDescription = ErrorExpected(Token.sortingToken); return; }
        }

        //Выдаём айдишники для группировки отсортированному (!) списку карт. На вход подаётся список параметров группировки, каждый параметр является списком полей, по которым необходимо сгруппировать.
        private void GiveGroupIDs(Database sortedDB, List<List<string>> fieldNames)
        {
            List<Entry> cards = sortedDB.cardList;
            //Последний использованный айди
            int lastID = 0;
            //пробегаемся по каждому списку полей для группировки
            foreach (List<string> element in fieldNames)
            {
                //берём данные о реальных полях из имён и составляем список
                List<FieldInfo> fields = new List<FieldInfo>();
                foreach (string fieldName in element)
                {
                    FieldInfo field = typeof(Entry).GetField(fieldName, BindingFlags.IgnoreCase | BindingFlags.Public | BindingFlags.Instance);
                    if (field == null) { errorDescription = "Wrong value name: " + token; return; }
                    fields.Add(field);
                }

                //Проходимся по картам
                for (int i = 0; i < cards.Count; i++)
                {
                    //если карте айди не назначен - назначаем (иначе просто пропускаем)
                    if (cards[i].groupID == 0)
                    {
                        cards[i].groupID = lastID + 1;
                        lastID++;
                        //назначив айди, проходим по оставшемуся списку и в случае соответствия каждого поля приравняем айди
                        if (i + 1 < cards.Count)
                        {
                            for (int j = i + 1; j < cards.Count; j++)
                            {
                                bool addToGroup = true;
                                foreach (FieldInfo field in fields)
                                {
                                    object left = field.GetValue(cards[i]);
                                    object right = field.GetValue(cards[j]);
                                    if (!field.GetValue(cards[i]).Equals(field.GetValue(cards[j])))
                                    {
                                        addToGroup = false;
                                        break;
                                    }
                                }
                                if (addToGroup) cards[j].groupID = cards[i].groupID;
                            }
                        }
                    }
                }
            }
        }

        //Сортировка базы данных по указанным полям. В тупле содержится поле и порядок сортировки (true - прямой порядок, false - обратный)
        private void SortDB (Database db, List<Tuple<string, bool>> fieldNames)
        {
            db.cardList.Sort(delegate (Entry x, Entry y)
            {
                //Обходим филднеймы из списка по очереди, если по приоритетному параметру различаются - возвращаем, иначе переходим к следующему филднейму
                foreach (Tuple<string,bool> fieldName in fieldNames)
                {
                    FieldInfo field = typeof(Entry).GetField(fieldName.Item1, BindingFlags.IgnoreCase | BindingFlags.Public | BindingFlags.Instance);
                    if (field != null)
                    {
                        if (field.GetValue(x).GetType() == typeof(bool))
                        {
                            bool xx = (bool)field.GetValue(x);
                            bool yy = (bool)field.GetValue(y);
                            if (xx && !yy && fieldName.Item2 || !xx && yy && !fieldName.Item2) return 1;
                            else if (!xx && yy && fieldName.Item2 || xx && !yy && !fieldName.Item2) return -1;
                        }
                        else if (field.GetValue(x).GetType() == typeof(int))
                        {
                            int xx = (int)field.GetValue(x);
                            int yy = (int)field.GetValue(y);
                            if (xx > yy && fieldName.Item2 || yy > xx && !fieldName.Item2) return 1;
                            else if (yy > xx && fieldName.Item2 || xx>yy && !fieldName.Item2) return -1;
                        }
                        else if (field.GetValue(x).GetType() == typeof(float))
                        {
                            float xx = (float)field.GetValue(x);
                            float yy = (float)field.GetValue(y);
                            if (xx > yy && fieldName.Item2 || yy > xx && !fieldName.Item2) return 1;
                            else if (yy > xx && fieldName.Item2 || xx > yy && !fieldName.Item2) return -1;
                        }
                        else if (field.GetValue(x).GetType() == typeof(string))
                        {
                            string xx = (string)field.GetValue(x);
                            string yy = (string)field.GetValue(y);
                            int comp = String.Compare(xx, yy);
                            if (comp > 0 && fieldName.Item2 || comp < 0 && !fieldName.Item2) return 1;
                            else if (comp < 0 && fieldName.Item2 || comp > 0 && !fieldName.Item2) return -1;
                        }
                        else { errorDescription = "Very strange error: wrong typeof() in sorting. You should debug it."; return 0; }
                    }
                    else { errorDescription = "Wrong value name: " + field; return 0; }
                }
                return 0;
            });
        }

        //formatting = formattingToken '=' "'" formattingValue "'"
        private string Format(Tokenizer t, Database db)
        {
            GetToken(t);
            if (token == Token.formattingToken.ToLower())
            {
                GetToken(t);
                if (token == "=")
                {
                    GetToken(t);
                    if (token == "'")
                    {
                        //Создаём выходную переменную
                        string output = "";
                        Tokenizer T = new Tokenizer(t.input.Substring(t.pos));
                        //Для каждой карты будем дописывать одну строку в аутпут
                        foreach (Entry card in db.cardList)
                        {
                            //Для каждой карты создаём свой токенайзер
                            T = new Tokenizer(t.input.Substring(t.pos));
                            //formattingValue = ([function] [field] [freeText])*;
                            while (!T.endIsReached && GetNextToken(T) != "'")
                            {
                                if (GetNextToken(T) == "$")
                                {
                                    output += T.GetWhiteSpaces();
                                    GetToken(T);
                                    //Дальше это либо функция, либо поле.
                                    if (GetNextToken(T) == "(")
                                    {
                                        Tuple<string, bool, string, float> result = EmptyFunction(T, card);
                                        if (errorDescription != null) return output;
                                        switch (result.Item1)
                                        {
                                            case "bool":
                                                output += result.Item2.ToString();
                                                break;
                                            case "string":
                                                output += result.Item3;
                                                break;
                                            case "number":
                                                output += result.Item4.ToString();
                                                break;
                                        }
                                    }
                                    else //либо поле, либо непустая функция
                                    {
                                        Tokenizer tempT = new Tokenizer(T.input.Substring(T.pos));
                                        string stringField = StringField(tempT, card);
                                        if (errorDescription != null)
                                        {
                                            tempT.SetPos(0);
                                            errorDescription = null;
                                            float numberField = NumberField(tempT, card);
                                            if (errorDescription != null)
                                            {
                                                tempT.SetPos(0);
                                                errorDescription = null;
                                                bool boolField = BoolField(tempT, card);
                                                if (errorDescription != null)
                                                {
                                                    tempT.SetPos(0);
                                                    errorDescription = null;
                                                    string stringResult = StringFunction(tempT, card);
                                                    if (errorDescription != null)
                                                    {
                                                        tempT.SetPos(0);
                                                        errorDescription = null;
                                                        float numberResult = NumberFunction(tempT, card);
                                                        if (errorDescription != null)
                                                        {
                                                            tempT.SetPos(0);
                                                            errorDescription = null;
                                                            bool boolResult = BoolFunction(tempT, card);
                                                            if (errorDescription != null) { errorDescription = "Parsing failed. That may be because of wrong field name or wrong function return type."; return output; }
                                                            else output += boolResult;
                                                        }
                                                        else output += numberResult;
                                                    }
                                                    else output += stringResult;
                                                }
                                                else output += boolField;
                                            }
                                            else output += numberField;
                                        }
                                        else output += stringField;

                                        T.SetPos(tempT.pos + T.input.Length - tempT.input.Length);
                                    }
                                }
                                else output += T.GetSymbol();
                            }
                            //после того, как закончили парсить формулу - переводим строку, переходим к следующей карте, для которой заново будем парсить формулу
                            output += "\r\n";
                        }
                        t.SetPos(T.pos + t.input.Length - T.input.Length);
                        GetToken(t);
                        if (token != "'") { errorDescription = ErrorQuotes("define formatting"); return output; }
                        return output;
                    }
                    else { errorDescription = ErrorQuotes("define formatting"); return ""; }
                }
                else { errorDescription = ErrorExpected("="); return ""; }
            }
            else { errorDescription = ErrorExpected(Token.formattingToken); return ""; }
        }

        
        #region Operators

        //value = boolValue | numberValue | stringValue
        private Tuple<string, bool, string, float> Value(Tokenizer t, Entry card)
        {
            Tokenizer T = new Tokenizer(t.input.Substring(t.pos));
            Tuple<string, bool, string, float> output;
            bool boolResult = BoolValue(T, card);
            if (errorDescription != null)
            {
                T.SetPos(0);
                errorDescription = null;
                float numberResult = NumberValue(T, card);
                if (errorDescription != null)
                {
                    T.SetPos(0);
                    errorDescription = null;
                    string stringResult = StringValue(T, card);
                    if (errorDescription != null) { errorDescription = "Parsing failed. Check the synthax."; return new Tuple<string, bool, string, float>("error", false, null, 0); }
                    else output = new Tuple<string, bool, string, float>("string", false, stringResult, 0);
                }
                else output = new Tuple<string, bool, string, float>("number", false, null, numberResult);
            }
            else output = new Tuple<string, bool, string, float>("bool", boolResult, null, 0);
            t.SetPos(T.pos + t.input.Length - T.input.Length);
            return output;
        }

        //emptyFunction = brackets
        //brackets = boolBrackets | numberBrackets | stringBrackets; (* '(' value ')' *)
        //brackets = '(' value ')'
        private Tuple<string, bool, string, float> EmptyFunction(Tokenizer t, Entry card)
        {
            GetToken(t);
            if (token == "(")
            {
                Tuple<string, bool, string, float> output = Value(t, card);
                if (errorDescription != null) return output;
                GetToken(t);
                if (token == ")") return output;
                else { errorDescription = ErrorExpected(")"); return output; }
            }
            else { errorDescription = ErrorExpected("("); return new Tuple<string, bool, string, float>("error", false, null, 0); }
        }

        #region Bool operators

        //boolValue = or
        //or = and (('|') and)*
        private bool BoolValue(Tokenizer t, Entry card)
        {
            bool left = And(t, card);
            if (errorDescription != null) return left;
            while (GetNextToken(t) == "|")
            {
                GetToken(t); //'|'
                bool right = And(t, card);
                left = left || right;
            }
            return left;
        }

        //and = equality (('&') equality)*
        private bool And(Tokenizer t, Entry card)
        {
            bool left = Equality(t, card);
            if (errorDescription != null) return left;
            while (GetNextToken(t) == "&")
            {
                GetToken(t);
                bool right = Equality(t, card);
                if (errorDescription != null) return left && right;
                left = left && right;
            }
            return left;
        }
